fix article excessive H1 line spacing (line-height)

--- a/_sass/partials/layout/_index.scss
+++ b/_sass/partials/layout/_index.scss
@@ -17,7 +17,6 @@
         h1{
             color: $title-color !important;
 		    font-weight: bold;
-            line-height: 48px;
             font-size: 24px;
             margin: 0;
             transition: .3s all ease;
